# Flow2Agent

./: .env.example  README.md  app.py  pyproject.toml  searchAgent.py  test.py  tools.py
static/: index.html
templates/: index.html
tools/: llm.py  notion.py
