[tool.poetry]
name = "pagesagent"
version = "0.1.0"
description = ""
authors = ["Frank Lin"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
duckduckgo-search = "^6.1.7"
langchain-community = "^0.2.6"
langchain-openai = "^0.1.14"
langchain = "^0.2.6"
langgraph = "^0.1.5"
langchain-core = "^0.2.11"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
